Added gift tastes for custom items (autographs & books) for Rodney, vanilla & SVE NPCs

--- a/[CP] Rodney O'Brien/i18n/default.json
+++ b/[CP] Rodney O'Brien/i18n/default.json
@@ -348,7 +348,6 @@
   "Coffee2": "Some old coffee mugs, mostly empty.",
   "RodClothes1": "While you sneak into Rodney's closet, you notice that he owns each piece of clothing twice with a pink version for everything.",
   "RodClothes2": "An important part of the closet is dedicated to storing official replica uniforms of various Stellar Gallivant shows.",
-  //"RodPictures": "Next to the bed, you can see a picture of a younger Rodney (with hair!) holding a baby in his arms. The other picture shows Rodney on his wedding day. He's wearing a navy blue tuxedo and his wife is wearing a beautiful white dress. They seem happy.",
   "RodBoat": "A model of an old sailboat. There's a little plaque that says 'I'll always ship you and me. -Annwenn'.",
   "RodBook1": "The Tarot Revealed: A complete guide to the Ferngill-O'Brien-Smith Tarot by Edwina O'Brien.",
   "RodBook2": "The Complete Deference Arlington Saga (Volumes 1 to 14), by Rodney O'Brien",
@@ -433,6 +432,26 @@
   "GiftReaction_StardropFlower": "@...$8#$b#This probably the prettiest flower I have ever seen, thank you so much!$1",
   "GiftReaction_RabbitFloof": "DEAR YOBA IT'S SO FLUFFY I'M GONNA DIE.$8",
   "GiftReaction_GiftReaction_RabbitClover": "My my, thanks a lot @. I could always use some good luck!$1",
+  //Books reaction 
+  "RodneyReaction.Book.ArcanaCatcherPrunus": "",
+  "RodneyReaction.Book.ArtifactOrCutlery": "",
+  "RodneyReaction.Book.CrabsAndWhyIHateThem": "",
+  "RodneyReaction.Book.DeferenceArlington": "",
+  "RodneyReaction.Book.FishingForDumbDumbs": "",
+  "RodneyReaction.Book.GettingChicksToLoveYou": "",
+  "RodneyReaction.Book.Goblins": "",
+  "RodneyReaction.Book.GuideToSculptingWithGold": "",
+  "RodneyReaction.Book.HerpetologyOfFerngill": "",
+  "RodneyReaction.Book.LunarkinTrollTales": "",
+  "RodneyReaction.Book.MysteriesOfTheDwarves": "",
+  "RodneyReaction.Book.PepperRexes": "",
+  "RodneyReaction.Book.TheBookOfYoba": "",
+  "RodneyReaction.Book.TheGreatBookOfSlimes": "",
+  "RodneyReaction.Book.TheGreatTomeOfMayo": "",
+  "RodneyReaction.Book.TheJojaConspiracy": "",
+  "RodneyReaction.Book.TheTarotRevealed": "",
+  "RodneyReaction.Book.WhyPepperRexesAreTheBest": "",
+
   // Schedule dialogue Platonic 
   //the name of the strings has been changed in 2.0.0
   "rod.001.0.Platonic": "I like this area. I often come here. It's a great place to think and there's nobody to bother me.$1#$b#Well... except you.$7",
