--- a/[CP] Rodney O'Brien/i18n/default.json
+++ b/[CP] Rodney O'Brien/i18n/default.json
@@ -469,7 +469,7 @@
   "rod.013": "Of course, I exercise! I love food too much!$1",
   "rod.014.Platonic": "You know, I wish I could enjoy this beach without pants sometimes.$4#$b#Tried it once and Mayor Lewis came to tell me that children come here sometimes. What a bummer.$b#$e#What?$7",
   "rod.015.Platonic": "Isn't this event quaint? Rosa did great!$1#$b#It's good to have our own Spirit's Eve celebration in East Scarp, right?#$b#Oh don't worry, I'll be heading into town later. I want every one to see my amazing costume. Have I told you it's an official replica?$4",
-  "rod.016.Platonic": "I might visit the Night Market again. It leaves tomorrow and we won't be able to enjoy it until next year!$1",
+ // "rod.016.Platonic": "I might visit the Night Market again. It leaves tomorrow and we won't be able to enjoy it until next year!$1", //removed in 3.0.0
   "rod.017.Platonic": "I'm considering visiting the Mermaid Boat tonight.#$b#For...$2#$b#Research purposes! Yep, that's it. I plan on telling a story about mermaids in an upcoming novel.$1#$b#That is why I want to see the Mermaid Show. Research.$4#$b#Yeah.#$e#You're still here?$7",
   "rod.018.Platonic": "The view is pretty amazing from up here, don't you think?#$b#I mean, I love the ocean view in East Scarp, but this is something else. You can see the whole valley!$1",
   "rod.021": "Oh, I didn't expect to see you there, @. I didn't know you were a friend of Mineral Town!$1#$b#Me? Oh, just visiting my old buddy Zack!",
