Fix for a broken location string. Updates for deprecated event preconditions.

--- a/[CP] Rodney O'Brien/i18n/default.json
+++ b/[CP] Rodney O'Brien/i18n/default.json
@@ -459,9 +459,9 @@
   "rod.001.2": "Feel the ocean breeze, @, and let the energy of the Gem Sea flow through you.#$b#Feels good, doesn't it?$1",
   "RodneyFreeAutographDialogue": "Hey, I know how to make your day better. Here take this!",
   "rod.003": "I'm impressed, I didn't know Mateo was a fan.$8#$b#They have some of my books here!",
-  "rod.007.0.Platonic": "You know @, I'm impressed.#$b#I walked all the way out here in order to be alone with my thoughts, and yet you still manage to find me and bother me with your nonsensical small talk.$2",
-  "rod.007.1.Platonic": "You came all the way up here? I'm impressed!$1#$b#Take a moment to breath the fresh air and enjoy the view, it's worth it.",
-  "rod.007.2.Platonic": "Oh hey @! That's a nice surprise. I didn't expect to see you here. I often come here to enjoy the sights.#$b#It's a great place to get the inspiration going.",
+  "rod.007.0": "You know @, I'm impressed.#$b#I walked all the way out here in order to be alone with my thoughts, and yet you still manage to find me and bother me with your nonsensical small talk.$2",
+  "rod.007.1": "You came all the way up here? I'm impressed!$1#$b#Take a moment to breath the fresh air and enjoy the view, it's worth it.",
+  "rod.007.2": "Oh hey @! That's a nice surprise. I didn't expect to see you here. I often come here to enjoy the sights.#$b#It's a great place to get the inspiration going.",
   "rod.008.Platonic": "Hello @, I didn't expect to see you at this hour.$7#$b#In my house. While I'm having breakfast.$5#$b#%Rodney takes a sip of coffee, and he mumbles behind his cup.#$b#You're lucky I'm wearing pants.$7",
   "rod.009": "Oh, I'm just listening to my favorite band, Iridium Crone.#$b# You know 'Dread of The Void'? It's my favorite song ever.#$b#METAL, BABY! $6",
   "rod.011.Platonic": "The Night Market is pretty magical, don't you think @?#$b#I might set up a booth and offer tarot readings next year, it would certainly fit with the atmosphere!$1",
